--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -12,29 +12,18 @@
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
     <script src="js/controller.js"></script>
-   
-
-
-
+    <script src="js/annyang.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <img class="changeImage left" src="cartoon_owl.png" alt="owl" width="50" height="42" onclick="fridgeApp.showView('home')">
+            <div>Speech recognition state: <span class="myStateText myErrorText">Not start yet</span></div>
+            <button class="myStartButton btn btn-primary btn-sm">Start speech interaction!</button>
             <nav class="navbar navbar-warning pull-right clear" role="navigation">
                 <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-
-                    </div>
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">                     
                             <li><span class="dark_brown" onclick="fridgeApp.showHelp()">Help</span></li>
                             <li><button class="dark_brown" onclick="fridgeApp.showView('welcome')">Welcome Page</button></li>
                             <li><button id="example" type="button" class="redButton">1</button></li>
@@ -45,7 +34,31 @@
                 </div>
             </nav>
         </div>
-       
+        <div class="row">
+			<div id="speechInstructions" class="alert alert-warning hidden alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				<h4>Ollie's Speech Instructions: </h4>
+				<ol>
+					<li>"Show speech instructions" to see speech instructions</li>
+					<li>"Post an item" to post an item</li>
+					<li>"Back to home page" to go back to home page</li>
+					<li>"Go to login page" to login or register</li>
+					<li>"Search by university" + [university] to filter by university [university]</li>
+					<li>"Search by price" + [price] to see items cheaper than $[price]</li>
+					<li>"Search by name" + [item name] to see items with their name containing [item name]</li>
+					<li>"Search by category" + [category] to see items in the category</li>
+					<li>"search by sub category" + [subcategory] to see items in the subcategory</li>
+				</ol>
+			</div>
+		</div>
+		<div class="row">
+			<div id="unsupported" class="alert alert-warning hidden alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				<h4>It looks like your browser doesn't support speech recognition.</h4>
+				<p>annyang plays nicely with all browsers, progressively enhancing modern browsers that support the SpeechRecognition standard, while leaving users with older browsers unaffected.</p>
+				<p>Please visit this url in a desktop browser like Chrome.</p>
+			</div>
+		</div>
 
         <div id="welcome-view" class="view">
             <button class="btn btn-default" onclick="fridgeApp.showView('home')">Home page of fridge-bay </button>
@@ -309,13 +322,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <label class="left"><input id="nameCutoffHome" type=text class="form-control color5" placeholder="Search by Name"  onchange="fridgeApp.refreshView()"></label>
+                    <label class="left"><input id="nameCutoffHome" type=text class="form-control color5" placeholder="Search by Name" onchange="fridgeApp.refreshView()"></label>
                 </div>
                 <div class="col-lg-4 pos">
                     <label><input id="schoolCutoffHome" type=text class="form-control color5" placeholder="Search by University" onchange="fridgeApp.refreshView()"></label>
                 </div>
                 <div class="col-lg-4">
-                    <label class="right"><input id="priceCutoffHome" type=number class="form-control color5" placeholder="Search by Price" onchange="fridgeApp.refreshView()"></label>
+                    <label class="right"><input id="priceCutoffHome" type=number min=0 class="form-control color5" placeholder="Search by Price" onchange="fridgeApp.refreshView()"></label>
                 </div>
             </div>
             <div class="row">
