Number is aligned to Nest Image

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -538,27 +538,8 @@
                         <p><img  src="cartoon_owl.png" alt="owl" width="45" height="37">llie's nest</p>
                     </div>
                     <div>
-                        <center><img  src="nest1.png" alt="owl" width="200" height="100"><h2 id="showNumber"></h2></center>
-
+                        <center><img id="nestImage"  src="nest1.png" alt="owl" width="200" height="100"><h2 id="showNumber" class="text-center"></h2></center>
                     </div> 
-                    <!--<div class="table-responsive hidden-lg visible-lg-*" >                 
-                        <table class="table table-default panel panel-warning">
-                            <thead class="color">
-                                <tr>
-                                    <th></th>
-                                    <th>Name</th>
-                                    <th>Price</th>
-                                    <th>University</th>
-                                    <th> Condition</th>
-                                    <th></th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            
-                            <tbody id="homeTableBody" class="color2">
-                            </tbody>
-                        </table>
-                    </div>-->
                     <div class="row" id="homeTableBody">
                         
                     </div>
