--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -29,6 +29,7 @@
             <img class="changeImage left" src="cartoon_owl.png" alt="owl" width="50" height="42" onclick="fridgeApp.showView('home')">
             <div>Speech recognition state: <span class="myStateText myErrorText">Not start yet</span></div>
             <button class="myStartButton btn btn-primary btn-sm">Start speech interaction!</button>
+            <button class="btn btn-default btn-sm" onclick="fridgeApp.homeChooseItem(0)">Choose Item</button>
             <nav class="navbar navbar-warning pull-right clear" role="navigation">
                 <div class="container-fluid">
                     <div class="collapse navbar-collapse">
