--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>FridgeBay</title>
@@ -238,7 +238,7 @@
                     <tbody class="color2">
                         <tr>
                             <td>
-                                <form class="form-horizontal" role="form">
+                                <form class="form-horizontal" action="/login" method="post" enctype="multipart/form-data" role="form">
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                                         <div class="col-sm-10">
