--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -44,7 +44,7 @@
                             <li><button class="dark_brown" onclick="fridgeApp.showView('welcome')">Welcome Page</button></li>
                             <li><button id="example" type="button" class="redButton">1</button></li>
                             <li><button class="dark_brown" onclick="fridgeApp.showView('form')">Post</button></li>
-                            <li><button class="dark_brown" onclick="fridgeApp.showView('login')">Login</button></li>
+                            <li><button class="dark_brown" href="/auth/logout">Logout</button></li>
                         </ul>
                     </div>
                 </div>
