further advances in login system including name recognition for posting, button login/logout changing, and buttons taking u directly to login and logout pages

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>FridgeBay</title>
@@ -44,7 +44,7 @@
                             <li><button class="dark_brown" onclick="fridgeApp.showView('welcome')">Welcome Page</button></li>
                             <li><button id="example" type="button" class="redButton">1</button></li>
                             <li><button class="dark_brown" onclick="fridgeApp.showView('form')">Post</button></li>
-                            <li><button class="dark_brown" href="/auth/logout">Logout</button></li>
+                            <li id="loginButton"><button class="dark_brown" onclick="fridgeApp.accessLogoutPage()">Logout</button></li>
                         </ul>
                     </div>
                 </div>
@@ -771,7 +771,7 @@
 										<input type="hidden" id="itemSeller" name="itemSeller"/>
 									</div>
 									<div class="place_right">
-										<input type="submit" class="dark_brown" type="submit" onclick="fridgeApp.reloadModel()"/>
+										<input type="submit" class="dark_brown"  onclick="fridgeApp.reloadModel()"/>
 									</div>
 								</form>
 							</td>
