Homepage Items are responsive: Issue:Number in Ollies Nest

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -547,9 +547,9 @@
                     </div>
                 </div>
 
-            <div  class="col-lg-10 place" > 
+            <div  class="col-lg-10" > 
                 <div class="text-center">
-                    <p><img  src="cartoon_owl.png" alt="owl" width="45" height="37">llie's nest</p>
+                    <p id="ollie"><img  src="cartoon_owl.png" alt="owl" width="45" height="37">llie's nest</p>
                 </div>
                 <div>
                     <center><img id="nestImage"  src="nest1.png" alt="owl" width="200" height="100"><h2 id="showNumber" class="text-center"></h2></center>
