Fixed Issue with Number in Ollies Nest

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -549,7 +549,7 @@
 
             <div  class="col-lg-10" > 
                 <div class="text-center">
-                    <p id="ollie"><img  src="cartoon_owl.png" alt="owl" width="45" height="37">llie's nest</p>
+                    <p class="ollie"><img  src="cartoon_owl.png" alt="owl" width="45" height="37">llie's nest</p>
                 </div>
                 <div>
                     <center><img id="nestImage"  src="nest1.png" alt="owl" width="200" height="100"><h2 id="showNumber" class="text-center"></h2></center>
