starting to work with interestList

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -211,7 +211,8 @@
 													
 												</tbody>	
 											</table>
-                                            <button class="btn btn-warning color4"  id="addToNest" onclick="fridgeApp.addToNest()">Add to Nest</button>
+                                            <div id="addToNest"></div>
+                                            
 										</p>
 								  	</div>
 								</div>							
